# bandits

./: .gitignore  Cargo.toml  README.md
config-tests/: lots-of-scripts.json
scripts/: bandit_example.sh
src/: bandits.rs  config.rs  ibeta.rs  insights.rs  thompson.rs
tests/: cli.rs
